--- a/generators/auth/templates/mongodb/passportLocal/public/views/home.hbs
+++ b/generators/auth/templates/mongodb/passportLocal/public/views/home.hbs
@@ -3,13 +3,21 @@
   <main class="mdl-layout__content">
     <div class="mdl-card mdl-shadow--6dp">
       <div class="mdl-card__title mdl-color--primary mdl-color-text--white">
-        <h2 class="mdl-card__title-text">Welcome {{ data.email }}!</h2>
+        <h2 class="mdl-card__title-text">Welcome {{ email }}!</h2>
       </div>
       <div class="mdl-card__supporting-text">
+          <p class="mdl-card__subtitle-text mdl-typography--text-right">Logged like {{ role }}</p>
         <div class="mdl-card__actions mdl-card--border">
           <a class="mdl-button" href='/users/profile'>Get
             Profile</a>
         </div>
+        {{#if (isAdmin role)}}
+          <div class="mdl-card__actions mdl-card--border">
+            <a class="mdl-button" href='/users'>Get
+               All Users
+            </a>
+          </div>
+        {{/if}}
       </div>
     </div>
   </main>
