--- a/generators/auth/templates/mysql/passportLocal/public/views/signup.hbs
+++ b/generators/auth/templates/mysql/passportLocal/public/views/signup.hbs
@@ -1,4 +1,4 @@
-<!-- src/public/views/login.hbs -->
+<!-- src/public/views/register.hbs -->
 <div class="mdl-layout mdl-js-layout mdl-color--grey-100">
   <main class="mdl-layout__content">
     <div class="mdl-card mdl-shadow--6dp">
