--- a/generators/auth/templates/mongodb/passportLocal/public/views/profile.hbs
+++ b/generators/auth/templates/mongodb/passportLocal/public/views/profile.hbs
@@ -11,7 +11,7 @@
           <figcaption>{{ data.email }}'s friend Here must be a pet name</figcaption>
         </figure>
         <div class="mdl-card__actions mdl-card--border">
-          <a class="mdl-button" href='/auth/logout'>Log Out</a>
+          <a class="mdl-button" href='/v1/auth/logout'>Log Out</a>
         </div>
       </div>
     </div>
