--- a/generators/auth/templates/mysql/passportLocal/public/views/home.hbs
+++ b/generators/auth/templates/mysql/passportLocal/public/views/home.hbs
@@ -8,12 +8,12 @@
       <div class="mdl-card__supporting-text">
           <p class="mdl-card__subtitle-text mdl-typography--text-right">Logged like {{ role }}</p>
         <div class="mdl-card__actions mdl-card--border">
-          <a class="mdl-button" href='/users/profile'>Get
+          <a class="mdl-button" href='/v1/users/profile'>Get
             Profile</a>
         </div>
         {{#if (isAdmin role)}}
           <div class="mdl-card__actions mdl-card--border">
-            <a class="mdl-button" href='/users'>Get
+            <a class="mdl-button" href='/v1/users'>Get
                All Users
             </a>
           </div>
