--- a/generators/auth/templates/mysql/passportLocal/public/views/login.hbs
+++ b/generators/auth/templates/mysql/passportLocal/public/views/login.hbs
@@ -6,7 +6,7 @@
         <h2 class="mdl-card__title-text">Login</h2>
       </div>
       <div class="mdl-card__supporting-text">
-        <form action="/auth/login" method="post">
+        <form action="/v1/auth/login" method="post">
           <div class="mdl-textfield mdl-js-textfield">
             <input class="mdl-textfield__input" type="text" name="email" id="email" />
             <label class="mdl-textfield__label" for="email">Email</label>
