--- a/generators/mailer/templates/postgresql/jwt/src/templates/verify-password.hbs
+++ b/generators/mailer/templates/postgresql/jwt/src/templates/verify-password.hbs
@@ -49,7 +49,7 @@
 			<p class="conf-p">
 				Let's confirm your email address
 			</p>
-			<a class="conf-link" href="{{host}}/auth/verify/{{token}}"
+			<a class="conf-link" href="{{host}}/v1/auth/verify/{{token}}"
 				><span class="link-text">Confirm Email Adress</span></a
 			>
 		</div>
